styling signup form

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  background-image: url("https://static.lolwallpapers.net/2015/08/minimap.jpg");
+  background-position: center top;
+}
+
+@media (max-width: 1350px) {
+  body {
+    background-image: none;
+    background: #45a29e;
+  }
 }
